--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,43 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="index.html">
+					<img src="assets/images/logo.png" alt=""> Aventador
+				</a>
+			</div>
+			<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="#home">Home</a></li>
+					<li><a href="#about">About</a></li>
+					<li><a href="/workshops">Workshops</a></li>
+					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#team">Team</a></li>
+					<li><a href="#pricing">Pricing</a></li>
+					<li><a href="#testimonials">Testimonials</a></li>
+					<li><a href="#contact">Contact</a></li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li><a href="#">Action</a></li>
+							<li><a href="#">Another action</a></li>
+							<li><a href="#">Something else here</a></li>
+							<li><a href="#">Separated link</a></li>
+							<li><a href="#">One more separated link</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<!-- <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="index.html">
 					<img src="assets/images/logo.png" alt="">
 				</a>
 			</div>
@@ -38,27 +75,18 @@
 						<a href="#" class="dropdown-toggle nav-bar-highlight" data-toggle="dropdown">Home <b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="#about">About</a></li>
-							<li><a href="#programs">Coding Programs</a></li>
+							<li><a href="#programs">Mushroom Menu</a></li>
 							<li><a href="#testimonials">Testimonials</a></li>
 							<li><a href="#team">Team</a></li>
 						</ul>
 					</li>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Home <b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li><a href="#about">About</a></li>
-							<li><a href="#programs">Coding Programs</a></li>
-							<li><a href="#testimonials">Testimonials</a></li>
-							<li><a href="#team">Team</a></li>
-						</ul>
-					</li>
-					<li><a href="/faq">Workshops</a></li>
+					<li><a href="/workshops">Workshops</a></li>
 					<li><a href="/summer-camp">Summer Camp</a></li>
 					<li><a href="/faq">FAQ</a></li>
 				</ul>
 			</div>
 		</div>
-	</nav>
+	</nav> -->
 
 	<!-- Carousel -->
 	<section id="top-panel">
